<resources>
    <string name="app_name">Bluboy</string>
    <string name="game_view_content_description">Game view</string>
    <string name="digit_abc">abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digit_alpha">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digit_name">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ.\'</string>
    <string name="digit_alpha_space">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digit_alphaNum">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="x_price_rupees">₹ %s</string>
    <string name="join_battle_rupees">Join: ₹ %s</string>
    <string name="hint_enter_mobile">Enter Mobile Number</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_user_name_str">Username <font color="#FF0000">*</font></string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_str">Email <font color="#FF0000">*</font></string>
    <string name="hint_referral_code">Referral Code</string>
    <string name="hint_select_state">Select State</string>
    <string name="hint_select_state_str">Select State <font color="#FF0000">*</font></string>
    <string name="hint_message">Message <font color="#FF0000">*</font></string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="hint_enter_amount_str">Enter Amount <font color="#FF0000">*</font></string>
    <string name="hint_beneficiary_account_name">Account Holder Name <font color="#FF0000">*</font></string>
    <string name="hint_confirm_beneficiary_account_number">Confirm Account Number <font color="#FF0000">*</font></string>
    <string name="hint_beneficiary_nickname">Nick Name <font color="#FF0000">*</font></string>
    <string name="hint_ifsc">IFSC Code <font color="#FF0000">*</font></string>
    <string name="hint_address">Address <font color="#FF0000">*</font></string>
    <string name="hint_city">City <font color="#FF0000">*</font></string>
    <string name="hint_state">State <font color="#FF0000">*</font></string>
    <string name="hint_pincode">Pincode <font color="#FF0000">*</font></string>
    <string name="hint_enter_amount_to_withdraw">Enter Amount to Withdraw</string>
    <string name="label_personal_signup">Please add your personal detail</string>
    <string name="label_login_signup">Welcome Back to Bluboy</string>
    <string name="label_enter_mobile">Please enter your phone number.\nWe will send you 4-digit code to verify your account.</string>
    <string name="label_terms_condition">Terms &amp; Conditions</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_verify">Verify</string>
    <string name="verify_sign_in">Verify code to Sign in</string>
    <string name="label_four_digit">Enter 4-digit code we have sent to at</string>
    <string name="label_click_upload_image">Upload Profile Photo</string>
    <string name="label_bonus">Bonus</string>
    <string name="label_cash_bal">Cash Bal.</string>
    <string name="label_popular_trending_games">Popular / Trending Games</string>
    <string name="label_featured_game">Featured Games</string>
    <string name="label_all_games">All Games</string>
    <string name="label_leaderboard">Leaderboard</string>
    <string name="label_my_games">My Games</string>
    <string name="label_refer_and_earn">Refer &amp; Earn</string>
    <string name="label_refer_earn">Refer and Earn</string>
    <string name="back_to_exit">Please click BACK again to exit</string>
    <string name="label_more_games">More\nGames</string>
    <string name="label_your_referal_code">Your Referral Code</string>
    <string name="label_invite_now">Invite Now</string>
    <string name="label_referal_earing">My Referral Earnings</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_your_stati">Your Statistics</string>
    <string name="label_games_won">Games Won</string>
    <string name="label_games_played">Games Played</string>
    <string name="label_total_winnings">Total Winnings</string>
    <string name="label_view_profile">View Profile</string>
    <string name="label_my_wallet">My Wallet</string>
    <string name="label_game_history">Game History</string>
    <string name="label_settings">Settings</string>
    <string name="label_how_to_play">How to Play</string>
    <string name="label_how_to_play_">How to Play?</string>
    <string name="label_push_notification">Push Notifications</string>
    <string name="label_about_us">About Us</string>
    <string name="label_about_empire">About %s</string>
    <string name="label_faq">FAQs</string>
    <string name="label_setting_terms_condition">Terms and Conditions</string>
    <string name="label_customer_support">Customer Support</string>
    <string name="label_logout">Logout</string>
    <string name="label_help_desk">Help Desk</string>
    <string name="label_chat_with_us">Chat with Us</string>
    <string name="label_bank_account">Bank Account</string>
    <string name="label_upi_id">UPI ID</string>
    <string name="label_upi_id_str">UPI ID <font color="#FF0000">*</font></string>
    <string name="label_paytm">Paytm</string>
    <string name="label_total_balance">Total Balance</string>
    <string name="label_deposite_cash">Deposit Cash</string>
    <string name="label_winning_amount">Winnings Amount</string>
    <string name="label_bonus_cash">Bonus Cash</string>
    <string name="label_transaction">Transactions</string>
    <string name="label_enter_amount_to_add">Enter Amount to Add <font color="#FF0000">*</font></string>
    <string name="label_amount_to_add">Amount to Add <font color="#FF0000">*</font></string>
    <string name="label_quick_option">Quick Add</string>
    <string name="label_add">Add</string>
    <string name="label_promocode">Promocode</string>
    <string name="label_promocode_s">Promocodes</string>
    <string name="label_add_cash">Add Cash</string>
    <string name="label_apply_promocode">Apply Promoocode</string>
    <string name="label_add_promocode">Add Promocode</string>
    <string name="label_Apply">APPLY</string>
    <string name="label_Wallet">Wallet</string>
    <string name="label_payment_options">Payment Options</string>
    <string name="label_link_wallet">Link Wallet</string>
    <string name="label_you_will_get">you will get ₹ 85 to your bank account.</string>
    <string name="label_select_upi">Select UPI</string>
    <string name="label_withdraw_cash">Withdraw Cash</string>
    <string name="label_my_beneficiary">My Beneficiary</string>
    <string name="label_battle">Battles</string>
    <string name="label_tournament">Tournaments</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_prize">Prize</string>
    <string name="label_paying_from">You are paying from</string>
    <string name="label_you_have_earned">You have earned</string>
    <string name="label_spin_your_wheel">SPIN YOUR WHEEL</string>
    <string name="label_you_are_not_connected">You are not Connected!</string>
    <string name="label_account_details">Account Details</string>
    <string name="beneficiary_add">Add Beneficiary</string>
    <string name="beneficiary_edit">Edit Beneficiary</string>
    <string name="otp_text">Haven\'t received code yet? Resend Now</string>
    <string name="resend_now_otp">Resend now!</string>
    <string name="label_account_holder_name">Account holder Name</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_bank_name">Bank Name <font color="#FF0000">*</font></string>
    <string name="label_upi_name">UPI</string>
    <string name="label_account_number">Account Number</string>
    <string name="label_account_number_str">Account Number <font color="#FF0000">*</font></string>
    <string name="label_no_item_in_list">There are no items in the list.</string>
    <string name="label_All">All</string>
    <string name="label_winning">Winnings</string>
    <string name="label_cash">Cash</string>
    <string name="label_withdraw">Withdrawal</string>
    <string name="update_message">To continue using this app, please download the latest version.</string>
    <string name="message_logout">Are you sure you want to logout from\n</string>
    <string name="message_promocode">You will get 10% extra on adding money to the wallet.</string>
    <string name="message_contact_us">Have an inquiry or some feedback for us?\nFill out the form below to contact our team.</string>
    <string name="messgae_link_wallet">Paytm wallet attached to +91 234567 8910 will be linked to your Empire Games payment options</string>
    <string name="message_register_successfully">Register Successfully</string>
    <string name="message_edit_profile">Edit Profile Successfully</string>
    <string name="message_no_internet_connection">Seems like you have lost internet connection. Check your network settings or try to relaunch the %s app.</string>
    <string name="message_spin_wheel_win">You have successfully earned %s \nBonus Cash from Wheel of Fortune.</string>
    <string name="message_success_registered">You have successfully registered with the %s.</string>
    <string name="message_get_every_referral">Get ₹%s for every referral</string>
    <string name="message_refer_deposite_every_time">Get ₹%s Bonus Wallet every time when friend signs up on Empire Games </string>
    <string name="message_deposite_amount_tool_tip">Your deposited balance will be reflected here.</string>
    <string name="message_withdraw_amount_tool_tip">Your winning balance will be reflected here, and you can withdraw your winning balance</string>
    <string name="message_bonus_amount_tool_tip">Your bonus balance will reflect here</string>
    <string name="message_dual_app">You can not use clone app. you can continue on Empire Games original app</string>
    <string name="message_sever_down_">Server down!.Please try after some time</string>
    <string name="rank_one">1st</string>
    <string name="rank_two">2nd</string>
    <string name="rank_three">3rd</string>
    <string name="button_add_cash">Add Cash</string>
    <string name="button_save">Save</string>
    <string name="button_add_now">Add Now</string>
    <string name="button_withdraw">Withdraw</string>
    <string name="button_link_wallet">Link Wallet</string>
    <string name="button_withdraw_money">Withdraw Money</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_add_beneficiary">Add Beneficiary</string>
    <string name="button_back_wallet">Back to Wallet</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="days_ago">D</string>
    <string name="day_ago">D</string>
    <string name="hours_ago">h</string>
    <string name="hour_ago">h</string>
    <string name="minutes_ago">m</string>
    <string name="minute_ago">m</string>
    <string name="just_now">just now</string>
    <string name="dummy_lorem_ipsum">Lorem ipsum is placeholder text commonly used in the graphic, print, and etc.</string>
    <string name="dummy_lorem_medium">Morbi vestibulum sit amet dolor in laoreet. Sed a magna odio. Praesent blandit felis non lacus lacinia efficitur. Maecenas accumsan nisl dui. Phasellus a nisl ac mi tristique porttitor at quis arcu. Nunc ullamcorper sapien lectus, in tempus tellus hendrerit eu. Donec vitae ante vestibulum, gravida eros eget, accumsan augue. Sed blandit erat ut elit molestie mollis. Sed nec urna sit amet</string>
    <string name="mobile_number">Mobile Number <font color="#FF0000">*</font></string>
</resources>