<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:orientation="vertical"
    tools:context=".presentation.wallet.BeneficiaryAddActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp">

            <include layout="@layout/layout_guideline" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAccountantNickName"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alpha_space"
                android:hint="@string/hint_beneficiary_nickname"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/texViewMessageD" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAccountantName"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alpha_space"
                android:hint="@string/hint_beneficiary_account_name"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etAccountantNickName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBankName"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alpha_space"
                android:hint="@string/label_bank_name"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etAccountantName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAccontNumber"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="0123456789 "
                android:hint="@string/label_account_number_str"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="19"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etBankName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmAccontNumber"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="0123456789 "
                android:hint="@string/hint_confirm_beneficiary_account_number"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="19"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etAccontNumber" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etIFSC"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alphaNum"
                android:hint="@string/hint_ifsc"
                android:inputType="textCapCharacters"
                android:maxLength="11"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etConfirmAccontNumber" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAddress"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/hint_address"
                android:inputType="textNoSuggestions|textFilter|textCapSentences"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etIFSC" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCity"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alpha_space"
                android:hint="@string/hint_city"
                android:inputType="textNoSuggestions|textFilter|textCapSentences"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etAddress" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etState"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:digits="@string/digit_alpha_space"
                android:hint="@string/hint_state"
                android:inputType="textNoSuggestions|textFilter|textCapSentences"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etCity" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPincode"
                style="@style/edtStyleCommon"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/hint_pincode"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/etState" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                style="@style/btnStyleCommon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/button_add_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPincode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>