<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:clipToPadding="false"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back_app"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/guidelineLogoEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLogoStart"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_title_back" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:alpha="0.25"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include layout="@layout/layout_guideline" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_transaction_item"
        app:layout_constraintCircleRadius="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearanceOverlay="@style/shapeableImageViewProfile" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewEditProfile"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:padding="@dimen/_2sdp"
        android:scaleType="fitXY"
        android:src="@drawable/pen_edit"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="@id/imageViewProfile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        style="@style/fontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/hint_user_name"
        android:textColor="@color/text_heading_color"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/imageViewEditProfile" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextName"
        style="@style/edtStyleCommon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:digits="@string/digit_name"
        android:hint="@string/hint_name"
        android:inputType="textCapWords"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUserName"
        style="@style/edtStyleCommon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:digits="@string/digit_abc"
        android:hint="@string/hint_user_name_str"
        android:inputType="text"
        android:maxLength="12"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        style="@style/edtStyleCommon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_email"
        android:longClickable="false"
        android:textColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPhone"
        style="@style/edtStyleCommon"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:longClickable="false"
        android:textColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/btnStyleCommon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>